tests/rt/pos/ifc/declassify_with_block02.trp
(* POSITIVE 

   Checks various normal interactions of blocking level declassification
   and declassification.

*)
import Missing

let val x = false raisedTo `<alice & bob;#root-integrity>`
    val y = false raisedTo `<alice;#root-integrity>`
    val auth_alice = attenuate (authority, `<alice;#root-integrity>`) 
    val _ = if x then receive [] else () 
    val _ = blockdecl authority 
    val y = pdeclassify (y,  auth_alice, `{}`) 
    val _ = if y then receive [] else ()  
    val _ = debugpc () 
    val _ = adv y 
in printWithLabels y 
end
